使用 Colaboratory 创建

--- a/walmart.ipynb
+++ b/walmart.ipynb
@@ -4868,7 +4868,11 @@
       "metadata": {
         "id": "YZlY2NxtPWj3",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        },
+        "outputId": "04f36b36-3fb7-4977-fda6-e3e056cf7e52"
       },
       "cell_type": "code",
       "source": [
@@ -4884,8 +4888,26 @@
         "#Train on data\n",
         "rf_model.fit(train[selector], train['Difference'])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+              "           max_features='auto', max_leaf_nodes=None,\n",
+              "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "           min_samples_leaf=1, min_samples_split=2,\n",
+              "           min_weight_fraction_leaf=0.0, n_estimators=80, n_jobs=1,\n",
+              "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
+        }
+      ]
     },
     {
       "metadata": {
@@ -4929,7 +4951,11 @@
       "metadata": {
         "id": "fhClNBNBPfO4",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 345
+        },
+        "outputId": "02890f6e-39d2-4151-df82-ba9c9e932a2d"
       },
       "cell_type": "code",
       "source": [
@@ -4937,8 +4963,224 @@
         "testfile['prediction'] = testfile['Median Sales']-testfile[0]\n",
         "testfile.head()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>CPI</th>\n",
+              "      <th>Date</th>\n",
+              "      <th>Dept</th>\n",
+              "      <th>Fuel_Price</th>\n",
+              "      <th>IsHoliday</th>\n",
+              "      <th>MarkDown1</th>\n",
+              "      <th>MarkDown2</th>\n",
+              "      <th>MarkDown3</th>\n",
+              "      <th>MarkDown4</th>\n",
+              "      <th>MarkDown5</th>\n",
+              "      <th>...</th>\n",
+              "      <th>Black_Friday_yes</th>\n",
+              "      <th>Median Sales</th>\n",
+              "      <th>Key</th>\n",
+              "      <th>DateLagged</th>\n",
+              "      <th>LaggedSales</th>\n",
+              "      <th>LaggedAvailable</th>\n",
+              "      <th>Sales_dif</th>\n",
+              "      <th>Difference</th>\n",
+              "      <th>0</th>\n",
+              "      <th>prediction</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>224.235290</td>\n",
+              "      <td>2013-02-01</td>\n",
+              "      <td>Dept_1</td>\n",
+              "      <td>3.244</td>\n",
+              "      <td>IsHoliday_False</td>\n",
+              "      <td>9290.91</td>\n",
+              "      <td>1359.90</td>\n",
+              "      <td>265.00</td>\n",
+              "      <td>20657.82</td>\n",
+              "      <td>972.61</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>23510.49</td>\n",
+              "      <td>Type_ADept_1Store_12013-02-01IsHoliday_False</td>\n",
+              "      <td>2013-01-25</td>\n",
+              "      <td>23510.49</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>23510.49</td>\n",
+              "      <td>-3471.469313</td>\n",
+              "      <td>26981.959313</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>224.276053</td>\n",
+              "      <td>2013-02-15</td>\n",
+              "      <td>Dept_1</td>\n",
+              "      <td>3.475</td>\n",
+              "      <td>IsHoliday_False</td>\n",
+              "      <td>72937.29</td>\n",
+              "      <td>6665.52</td>\n",
+              "      <td>47.21</td>\n",
+              "      <td>13014.67</td>\n",
+              "      <td>6310.18</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>23510.49</td>\n",
+              "      <td>Type_ADept_1Store_12013-02-15IsHoliday_False</td>\n",
+              "      <td>2013-02-08</td>\n",
+              "      <td>23510.49</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>23510.49</td>\n",
+              "      <td>-3814.550875</td>\n",
+              "      <td>27325.040875</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>224.420289</td>\n",
+              "      <td>2013-02-22</td>\n",
+              "      <td>Dept_1</td>\n",
+              "      <td>3.597</td>\n",
+              "      <td>IsHoliday_False</td>\n",
+              "      <td>20107.75</td>\n",
+              "      <td>3163.89</td>\n",
+              "      <td>42.20</td>\n",
+              "      <td>15657.30</td>\n",
+              "      <td>5812.86</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>23510.49</td>\n",
+              "      <td>Type_ADept_1Store_12013-02-22IsHoliday_False</td>\n",
+              "      <td>2013-02-15</td>\n",
+              "      <td>23510.49</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>23510.49</td>\n",
+              "      <td>-3649.348125</td>\n",
+              "      <td>27159.838125</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>224.235290</td>\n",
+              "      <td>2013-02-01</td>\n",
+              "      <td>Dept_2</td>\n",
+              "      <td>3.244</td>\n",
+              "      <td>IsHoliday_False</td>\n",
+              "      <td>9290.91</td>\n",
+              "      <td>1359.90</td>\n",
+              "      <td>265.00</td>\n",
+              "      <td>20657.82</td>\n",
+              "      <td>972.61</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>47080.12</td>\n",
+              "      <td>Type_ADept_2Store_12013-02-01IsHoliday_False</td>\n",
+              "      <td>2013-01-25</td>\n",
+              "      <td>47080.12</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>47080.12</td>\n",
+              "      <td>-6688.730625</td>\n",
+              "      <td>53768.850625</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>224.276053</td>\n",
+              "      <td>2013-02-15</td>\n",
+              "      <td>Dept_2</td>\n",
+              "      <td>3.475</td>\n",
+              "      <td>IsHoliday_False</td>\n",
+              "      <td>72937.29</td>\n",
+              "      <td>6665.52</td>\n",
+              "      <td>47.21</td>\n",
+              "      <td>13014.67</td>\n",
+              "      <td>6310.18</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>47080.12</td>\n",
+              "      <td>Type_ADept_2Store_12013-02-15IsHoliday_False</td>\n",
+              "      <td>2013-02-08</td>\n",
+              "      <td>47080.12</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>47080.12</td>\n",
+              "      <td>-5634.698750</td>\n",
+              "      <td>52714.818750</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 41 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          CPI        Date    Dept  Fuel_Price        IsHoliday  MarkDown1  \\\n",
+              "0  224.235290  2013-02-01  Dept_1       3.244  IsHoliday_False    9290.91   \n",
+              "1  224.276053  2013-02-15  Dept_1       3.475  IsHoliday_False   72937.29   \n",
+              "2  224.420289  2013-02-22  Dept_1       3.597  IsHoliday_False   20107.75   \n",
+              "3  224.235290  2013-02-01  Dept_2       3.244  IsHoliday_False    9290.91   \n",
+              "4  224.276053  2013-02-15  Dept_2       3.475  IsHoliday_False   72937.29   \n",
+              "\n",
+              "   MarkDown2  MarkDown3  MarkDown4  MarkDown5      ...       Black_Friday_yes  \\\n",
+              "0    1359.90     265.00   20657.82     972.61      ...                      0   \n",
+              "1    6665.52      47.21   13014.67    6310.18      ...                      0   \n",
+              "2    3163.89      42.20   15657.30    5812.86      ...                      0   \n",
+              "3    1359.90     265.00   20657.82     972.61      ...                      0   \n",
+              "4    6665.52      47.21   13014.67    6310.18      ...                      0   \n",
+              "\n",
+              "  Median Sales                                           Key  DateLagged  \\\n",
+              "0     23510.49  Type_ADept_1Store_12013-02-01IsHoliday_False  2013-01-25   \n",
+              "1     23510.49  Type_ADept_1Store_12013-02-15IsHoliday_False  2013-02-08   \n",
+              "2     23510.49  Type_ADept_1Store_12013-02-22IsHoliday_False  2013-02-15   \n",
+              "3     47080.12  Type_ADept_2Store_12013-02-01IsHoliday_False  2013-01-25   \n",
+              "4     47080.12  Type_ADept_2Store_12013-02-15IsHoliday_False  2013-02-08   \n",
+              "\n",
+              "  LaggedSales  LaggedAvailable  Sales_dif  Difference            0  \\\n",
+              "0    23510.49              0.0        0.0    23510.49 -3471.469313   \n",
+              "1    23510.49              0.0        0.0    23510.49 -3814.550875   \n",
+              "2    23510.49              0.0        0.0    23510.49 -3649.348125   \n",
+              "3    47080.12              0.0        0.0    47080.12 -6688.730625   \n",
+              "4    47080.12              0.0        0.0    47080.12 -5634.698750   \n",
+              "\n",
+              "     prediction  \n",
+              "0  26981.959313  \n",
+              "1  27325.040875  \n",
+              "2  27159.838125  \n",
+              "3  53768.850625  \n",
+              "4  52714.818750  \n",
+              "\n",
+              "[5 rows x 41 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
     },
     {
       "metadata": {
@@ -4954,7 +5196,11 @@
       "metadata": {
         "id": "ksx2rTkVPjEX",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        },
+        "outputId": "9ec2c135-0d41-4832-cb6d-686a63cf0a3f"
       },
       "cell_type": "code",
       "source": [
@@ -4964,8 +5210,79 @@
         "                          'Weekly_Sales':testfile['prediction']})\n",
         "submission.head()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Weekly_Sales</th>\n",
+              "      <th>id</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>26981.959313</td>\n",
+              "      <td>1_1_2013-02-01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>27325.040875</td>\n",
+              "      <td>1_1_2013-02-15</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>27159.838125</td>\n",
+              "      <td>1_1_2013-02-22</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>53768.850625</td>\n",
+              "      <td>1_2_2013-02-01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>52714.818750</td>\n",
+              "      <td>1_2_2013-02-15</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Weekly_Sales              id\n",
+              "0  26981.959313  1_1_2013-02-01\n",
+              "1  27325.040875  1_1_2013-02-15\n",
+              "2  27159.838125  1_1_2013-02-22\n",
+              "3  53768.850625  1_2_2013-02-01\n",
+              "4  52714.818750  1_2_2013-02-15"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 61
+        }
+      ]
     },
     {
       "metadata": {
@@ -4986,6 +5303,53 @@
       "cell_type": "code",
       "source": [
         "submission.to_csv(r'walmart\\submission.csv',index=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "ilcIFMThJbxB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0a1798dc-f80f-4957-9c11-ecd90975702f"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Downlaod output files\n",
+        "from google.colab import files\n",
+        "import os\n",
+        "path = r'./walmart/submission.csv'\n",
+        "if os.path.isfile(path):\n",
+        "    files.download(path)\n",
+        "else:\n",
+        "    print('Can't find ' + path)\n",
+        "          \n",
+        "#uploaded = files.upload()\n"
+      ],
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "YancWb4dN5yo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
